# Programmation_c_partie_2

./: README.md
Exam-2025-01-15-LC2-Angelo_ALLIES/: decisionTree.c  decisionTree.h  main.c  main_teacher.c  makefile  test.c  test.h  treeQ1.dot  treeUnValid.dot  treeValid.dot
Examen_18_01_2021/student/: CMakeLists.txt  line.c  line.h  line_ref.h  main.c  makefile  result.dot  result_ref.dot
Examen_janvier_2017/: CMakeLists.txt  crypto.c  crypto.h  file.c  file.h  list.c  list.h  main.c  makefile
TD_Makefile/: tuto-make-main-getopt.ipynb
TD_Makefile/.ipynb_checkpoints/: tuto-make-main-getopt-checkpoint.ipynb
TD_Makefile/main-arg/: myop.c  mysum.c  test-getopt.c
TD_Makefile/prod-cons/: Makefile  Makefile.Q1  Makefile.Q2  Makefile.Q3  Makefile.Q4  Makefile.Q5  Makefile.Q6  Makefile.Q7  globals_prod_conso.h  init_conso_prod.c
TP1/: application.h  evaluation.c  evaluation.h  evaluationString.c  makefile  stack.c  stack.h
TP1/1.2/: makefile
TP1/1.3.A/: evaluation.c  makefile  stack.h
TP1/1.3.B/: evaluation.c  (+1 more)
TP2/: image-proba.c  image.c  image.h  main.c  makefile
TP3/: BMPFile.h  CMakeLists.txt  imageRGB.c  main.c  makefile
TP4/: BMPFile.c  BMPFile.h  imageRGB.c  main.c  makefile
TP5/: CMakeLists.txt  listMO.c  listMO.h  main_testMO.c  makefile  multimedia-object.c  multimedia-object.h
TP6/: makefile
TP7/: CMakeLists.txt  main.c  makefile  myDoubleTree.c
TP8/: CMakeLists.txt  binary_tree.c  binary_tree.h  image-proba.c  image.h  main-Huffman.c  mainBTree.c  makefile
TP9/: CMakeLists.txt  dijkstra.c  dijkstra.h  graph.h  main.c  makefile
(+80 files in other folders)
